k8s/search/search-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: search-pod
  namespace: p-spring-search
  labels:
    app: search-product
spec:
  nodeSelector:
    workload: search
  imagePullSecrets:
    - name: dockerhub-secret
  containers:
    - name: search-container
      image: danysoftdev/p-spring-search:latest
      ports:
        - containerPort: 8080
