k8s/search/search-service.yml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: p-spring-search
  labels:
    app: search-product
spec:
  selector:
    app: search-product
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: ClusterIP
