k8s/search/search-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-ingress
  namespace: p-spring-search
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /buscar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: search-service
                port:
                  number: 8082
